WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300846
REGRESSION: Media control icons can be blocked by the content blocker after
299342@main
https://bugs.webkit.org/show_bug.cgi?id=300846
Summary
REGRESSION: Media control icons can be blocked by the content blocker after 2...
Eric Carlson
Reported
2025-10-15 16:39:02 PDT
299342@main
switched from using a `data:` url for the images in media control buttons to loading a native image from the file system, creating a `blob:` url, and using that to set an <image> element's src attribute. Images loaded for the default media controls are exempt from CORS checks but they are subject to content blocker rules, so applications that configure the content blocker to disallow `blob:` urls have no images in the default media controls.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2025-10-15 16:40:48 PDT
rdar://161674785
Eric Carlson
Comment 2
2025-10-15 16:45:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52428
EWS
Comment 3
2025-10-15 20:54:18 PDT
Committed
301602@main
(3da2cfe70568): <
https://commits.webkit.org/301602@main
> Reviewed commits have been landed. Closing PR #52428 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug