REGRESSION: Media control icons can be blocked by the content blocker after 299342@main https://bugs.webkit.org/show_bug.cgi?id=300846 rdar://161674785

Reviewed by Jer Noble.

299342@main switched from using a `data:` url for the images in media control buttons to
loading a native image from the file system, creating a `blob:` url, and using that to
set an <image> element's src attribute. Images loaded for the default media controls are
subject to content blocker rules, so applications that configure the content blocker to
disallow `blob:` urls have no images in the default media controls.

Images loaded for the default media controls are already exempt from CORS checks, so also
allow them to skip content blocker checks.

* Source/WebCore/loader/ImageLoader.cpp:
(WebCore::ImageLoader::updateFromElement):
* Source/WebCore/style/StylePendingResources.cpp:
(WebCore::Style::loadPendingImage):

Canonical link: https://commits.webkit.org/301602@main